--- a/.github/workflows/single_container.yml
+++ b/.github/workflows/single_container.yml
@@ -25,7 +25,11 @@ jobs:
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-      
+
+      - name: Set Environment
+        run: |
+          az aks get-credentials --resource-group ${{ secrets.UNIQUE_NAME }} --name ${{ secrets.UNIQUE_NAME }}
+
       - name: Docker Login to Registry
         run: |
           az acr login --name ${{ env.registryName }}
