--- a/.github/workflows/frontend_backend.yml
+++ b/.github/workflows/frontend_backend.yml
@@ -25,6 +25,10 @@ jobs:
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Set Environment
+        run: |
+          az aks get-credentials --resource-group ${{ secrets.UNIQUE_NAME }} --name ${{ secrets.UNIQUE_NAME }}
       
       - name: Docker Login to Registry
         run: |
