--- a/stage_5_envoy/envoy/envoy.yaml
+++ b/stage_5_envoy/envoy/envoy.yaml
@@ -1,45 +1,32 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: myapp-envoy
-  labels:
-    app: myapp-envoy
-spec:
-  type: ClusterIP
-  ports:
-  - name: http
-    port: 80
-    targetPort: http
-    protocol: TCP
-  selector:
-    app: myapp-envoy
----
-apiVersion: extensions/v1beta1
-kind: Deployment
-metadata:
-  name: myapp-envoy
-  labels:
-    app: myapp-envoy
-spec:
-  selector:
-    matchLabels:
-      app: myapp-envoy
-  template:
-    metadata:
-      labels:
-        app: myapp-envoy
-    spec:
-      containers:
-      - name: myapp-envoy
-        image: mydockerhub/mycustomenvoy
-        imagePullPolicy: Always
-        env:
-        - name: "ENVOY_LB_ALG"
-          value: "LEAST_REQUEST"
-        - name: "SERVICE_NAME"
-          value: "myapp"
-        ports:
-        - name: http
-          containerPort: 80
-        - name: envoy-admin
-          containerPort: 9901
+admin:
+  access_log_path: /tmp/admin_access.log
+  address:
+    socket_address: { address: 0.0.0.0, port_value: 9901 }
+
+static_resources:
+  listeners:
+  - name: listener_0
+    address:
+      socket_address: { address: 0.0.0.0, port_value: 80 }
+    filter_chains:
+    - filters:
+      - name: envoy.http_connection_manager
+        config:
+          stat_prefix: ingress_http
+          route_config:
+            name: local_route
+            virtual_hosts:
+            - name: local_service
+              domains: ["*"]
+              routes:
+              - match: { prefix: "/" }
+                route: { host_rewrite: myapp, cluster: myapp_cluster, timeout: 60s }
+          http_filters:
+          - name: envoy.router
+  clusters:
+  - name: myapp_cluster
+    connect_timeout: 0.25s
+    type: STRICT_DNS
+    dns_lookup_family: V4_ONLY
+    lb_policy: LEAST_REQUEST
+    hosts: [{ socket_address: { address: myapp, port_value: 80 }}]
