--- a/stage_5_envoy/envoy/Dockerfile
+++ b/stage_5_envoy/envoy/Dockerfile
@@ -1,3 +1,3 @@
-FROM envoyproxy/envoy:latest
+FROM envoyproxy/envoy:v1.20-latest
 COPY envoy.yaml /etc/envoy.yaml
 CMD /usr/local/bin/envoy -c /etc/envoy.yaml
