--- a/stage_5_envoy/service.yaml
+++ b/stage_5_envoy/service.yaml
@@ -1,13 +1,33 @@
+---
 apiVersion: v1
 kind: Service
 metadata:
-  name: myapp
+  name: nginx
 spec:
-  clusterIP: None
-  ports:
-  - name: http
-    port: 80
-    targetPort: http
-    protocol: TCP
   selector:
-    app: myapp
+    app: nginx
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: nginx-hello-world
+  namespace: default
+  labels:
+    app: nginx
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: nginx
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      containers:
+      - name: nginx
+        image: 2021hackathon.azurecr.io/nginx:latest
+        ports:
+        - containerPort: 80
+        resources: {}
