--- a/stage_5_envoy/service.yaml
+++ b/stage_5_envoy/service.yaml
@@ -1,11 +1,32 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: myapp
+spec:
+  clusterIP: None
+  ports:
+  - name: http
+    port: 80
+    targetPort: http
+    protocol: TCP
+  selector:
+    app: myapp
+
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: myapp
 spec:
+  clusterIP: None
+  ports:
+  - name: http
+    port: 80
+    targetPort: http
+    protocol: TCP
   selector:
-    app: nginx
+    app: myapp
 
 ---
 apiVersion: apps/v1
@@ -14,19 +35,19 @@ metadata:
   name: nginx-hello-world
   namespace: default
   labels:
-    app: nginx
+    app: myapp
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nginx
+      app: myapp
   template:
     metadata:
       labels:
-        app: nginx
+        app: myapp
     spec:
       containers:
-      - name: nginx
+      - name: myapp
         image: 2021hackathon.azurecr.io/nginx:latest
         ports:
         - containerPort: 80
