--- a/stage_5_envoy/envoy.yaml
+++ b/stage_5_envoy/envoy.yaml
@@ -37,7 +37,7 @@ spec:
         - name: "ENVOY_LB_ALG"
           value: "LEAST_REQUEST"
         - name: "SERVICE_NAME"
-          value: "myapp"
+          value: "nginx"
         ports:
         - name: http
           containerPort: 80
