--- a/stage_5_envoy/service.yaml
+++ b/stage_5_envoy/service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: myapp
+  name: nginx
 spec:
   clusterIP: None
   ports:
@@ -20,19 +20,19 @@ metadata:
   name: nginx-hello-world
   namespace: default
   labels:
-    app: myapp
+    app: nginx
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: myapp
+      app: nginx
   template:
     metadata:
       labels:
-        app: myapp
+        app: nginx
     spec:
       containers:
-      - name: ngins
+      - name: nginx
         image: 2021hackathon.azurecr.io/nginx:latest
         ports:
         - containerPort: 80
