--- a/stage_5_envoy/envoy.yaml
+++ b/stage_5_envoy/envoy.yaml
@@ -11,7 +11,7 @@ spec:
     port: 80
     targetPort: http
     protocol: TCP
-  - name: http
+  - name: admin
     port: 9901
     targetPort: http
     protocol: TCP
